--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   ],
   "main": "generators/index.js",
   "keywords": [
+    "goblinfactory",
     "angular2",
     "ionic2",
     "aurelia",
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "columnify": "^1.5.4",
+    "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
   "devDependencies": {
