--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "camelcase": "^4.0.0",
     "chalk": "^1.1.3",
     "columnify": "^1.5.4",
+    "pascal-case": "^2.0.0",
     "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
